# cv

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  README.md  Taskfile.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/application-pack/: SKILL.md
.claude/skills/cv-pipeline/: SKILL.md
.claude/skills/diagnoser/: SKILL.md
.claude/skills/hiring-manager/: SKILL.md
.claude/skills/recruiter/: SKILL.md
.claude/skills/rewriter/: SKILL.md
cv/: data.yaml  design.yaml  theme.yaml
docs/: claude-skills.md  resume-rules.md
projects/: ai-notes-api.md  code-kata.md  quick.md
prompts/: project-analysis-prompt.md
