[project]
name = "cv"
version = "0.1.0"
description = "Professional resume built with RenderCV"
authors = [{ name = "NKTKLN", email = "nktkln@nktkln.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "rendercv[full]>=2.8",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "commitizen>=4.13.7",
  "check-jsonschema>=0.37.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
